# FluorographyGeant

./: README.md
F1/: CMakeLists.txt  GNUmakefile  exampleF1.cc  run.mac  vis.mac
F1/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
F1/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
F2.6/: CMakeLists.txt  go.cc  run1.mac  run_spec.mac  vis.mac
F2.6/include/: ActionInitialization.hh  Detector.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh
F2.6/src/: ActionInitialization.cc  Detector.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc
F2.dop/: go.cc  run_spec.mac
F2.dop/include/: ActionInitialization.hh  Detector.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh
F2.dop/src/: ActionInitialization.cc  Detector.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  physics.cc
